fix : issue8370 sidebar overlaps with collapse btn

--- a/packages/docusaurus-theme-classic/src/theme/DocSidebar/Desktop/CollapseButton/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/DocSidebar/Desktop/CollapseButton/styles.module.css
@@ -5,9 +5,10 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-:root {
+ :root {
   --docusaurus-collapse-button-bg: transparent;
   --docusaurus-collapse-button-bg-hover: rgb(0 0 0 / 10%);
+  --docusaurus-collapse-button-margin-bottom: 0;
 }
 
 [data-theme='dark']:root {
@@ -44,4 +45,8 @@
 .collapseSidebarButton {
   display: none;
   margin: 0;
+}
+
+.menuWithAnnouncementBar {
+  margin-bottom: var(--docusaurus-collapse-button-margin-bottom);
 }
